# nxtbot

./: Cargo.toml
nxtbot-dll/: Cargo.toml
nxtbot-dll/src/: lib.rs
nxtbot-dll/src/engine/: globals.rs  mod.rs
nxtbot-dll/src/sdk/: error.rs  mod.rs
nxtbot-dll/src/sdk/macros/: function.rs  global.rs  mod.rs  offset.rs
nxtbot-dll/src/sdk/overlay/: app.rs  input.rs  mod.rs  overlay.rs  painter.rs  utils.rs
nxtbot-dll/src/sdk/overlay/shader/: mod.rs
nxtbot-loader/: Cargo.toml
nxtbot-loader/src/: main.rs
