[package]
name = "nxtbot-dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "nxtbot"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
thiserror = "1.0.39"
faithe = "0.8.0"
once_cell = "1.17.1"
lazy_static = "1.4.0"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread"] }
fern = { version = "0.6.1", features = ["colored", "date-based"] }
chrono = "0.4.23"
retour = "0.1.0"


[dependencies.winapi]
version = "0.3.9"
features = [
    "impl-default",
    "winbase",
    "winuser",
    "minwindef",
    "windef",
    "winnt",
    "memoryapi",
    "consoleapi"
]