[package]
name = "nxtbot-dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "nxtbot"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
thiserror = "1.0.39"
once_cell = "1.17.1"
lazy_static = "1.4.0"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread"] }
fern = { version = "0.6.1", features = ["colored", "date-based"] }
chrono = "0.4.23"
retour = "0.1.0"
dynasmrt = "2.0.0"
faithe = { git = "https://github.com/sy1ntexx/faithe" }
egui = "0.21.0"
egui_demo_lib = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
gl = "0.14.0"
spin = { version = "0.9.6", features = ["lock_api"] }
lock_api = "0.4.9"
clipboard = "0.5"
windows = { version = "0.44", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_OpenGL", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_Graphics_Gdi"] }
image = { version = "0.24", features = ["jpeg"] }
parking_lot = { version = "0.12" }

[dependencies.winapi]
version = "0.3.9"
features = [
    "impl-default",
    "winbase",
    "winuser",
    "minwindef",
    "windef",
    "winnt",
    "memoryapi",
    "consoleapi",
]